--- a/io.core/app/Assets/style.scss
+++ b/io.core/app/Assets/style.scss
@@ -3,11 +3,45 @@
 }
 
 body {
+	background: #f5f5f5;
 	font-family: 'Roboto', sans-serif;
 }
 
-.side-nav li {
-	padding: 0;
+.nav {
+	background-color: #009688;
+}
+
+.nav-wrapper {
+	background-color: #26a69a;
+}
+
+.content {
+	margin: 1rem;
+	padding: 1rem;
+	padding-top: 20px;
+}
+
+.side-nav {
+	li.active {
+		background: #4db6ac;
+	}
+
+	li {
+		background: #eeeeee;
+
+		:hover {
+			background: #b2dfdb;
+		}
+
+		padding: 0;
+	}
+
+	background-color: #fafafa;
+}
+
+.side-nav .collapsible-body li a {
+	margin: 0;
+	padding: 0 1rem 0 2rem;
 }
 
 .app {
@@ -24,7 +58,6 @@ body {
 	flex-direction: row;
 	align-items: center;
 	width: 100%;
-  	justify-content: center;
-  	border-bottom: 1px solid #e1e1e1;
-  	background-color: #fAfAfA;
+	justify-content: center;
+	border-bottom: 1px solid #e1e1e1;
 }
