--- a/assets/css/reaper-countdown.css
+++ b/assets/css/reaper-countdown.css
@@ -1,9 +1,3 @@
-.image1 { animation:thing 2s linear infinite; }
-.image2 { animation:thing 11s linear infinite; }
-.image3 { animation:thing 17s linear infinite; }
-.image4 { animation:thing 9s linear infinite; }
-.image5 { animation:thing 3s linear infinite; }
-.image6 { animation:thing 7s linear infinite; }
 .component {
   width: 240px;
   height: 240px;
@@ -17,11 +11,6 @@
   top: 50%;
   left: 50%;
   margin:-405px 0 0 -270px;
-}
-@keyframes thing {
-  0% { opacity: 1; }
-  50% { opacity: 0; }
-  100% { opacity: 1; transform: rotate(360deg); }
 }
 #reaper-ref-container {
   text-align: center;
@@ -42,7 +31,7 @@
   margin-bottom: 10px;
   margin: -10px;
   width: 100%;
-  z-index: 100;
+  z-index: 50;
   position: fixed;
 }
 #countdown-text {
@@ -51,4 +40,11 @@
 #trigger-end {
   position: fixed;
   bottom: 0%;
+}
+.hidden-end-button {
+  background: transparent;
+  border: none !important;
+  min-width: 50px;
+  min-height: 50px;
+  font-size: 0 !important;
 }
