--- a/assets/css/reaper-countdown.css
+++ b/assets/css/reaper-countdown.css
@@ -1,25 +1,30 @@
 .component {
-  width: 240px;
-  height: 240px;
+  width: 26.6vh;
+  height: 26.6vh;
   position: fixed;
-  top: 50%;
+  top: 42.5vh;
   left: 50%;
-  margin: -70px 0 0 -115px;
+  margin-left: -13.3vh;
 }
 .centered-back {
   position: fixed;
-  width: 540;
-  height: 810;
-  top: 50%;
+  width: 60vh;
+  height: 90vh;
+  top: 5vh;
   left: 50%;
-  margin:-405px 0 0 -270px;
+  margin-left: -30vh;
+}
+#will-wight-tag {
+  width: 50vh;
+}
+#reaper-tag {
+  width: 45vh;
 }
 #reaper-ref-container {
   text-align: center;
   font-family: 'Quattrocento Sans', sans-serif;
   color: white;
-  margin-top: -300px;
-  top: 50%;
+  top: 10vh;
   width: 100%;
   z-index: 100;
   position: fixed;
@@ -29,7 +34,7 @@
   font-family: 'Quattrocento Sans', sans-serif;
   color: white;
   background: #142456;
-  bottom: 100px;
+  bottom: 10vh;
   margin-bottom: 10px;
   margin: -10px;
   width: 100%;
